tests/v0-fail/repeat.cli
#!/usr/bin/env clitest --v0

$ printf "hello\n"
repeat {
    ! goodbye
}
